@@ -1,3 +1,7 @@
+2007-11-05  Ingmar Schlecht  <ingmar@typo3.org>
+
+	* Issue #6641: Renamed new page tree related TSconfig Options and switched off separateNotinmenuPages by default (Thanks to Christian Kuhn)
+
 2007-11-02  Ingmar Schlecht  <ingmar@typo3.org>
 
 	* Added default SVN properties and Id marker to new files which didn't have it yet
